--- a/musor/docker-compose.yaml
+++ b/musor/docker-compose.yaml
@@ -2,6 +2,12 @@ version: '3'
 services:
   jenkins:
     build:
+      context: ./Jenkins
       dockerfile: Dockerfile
     ports:
-      - "80:8080"
+      - 80:8080
+    networks:
+      - Jenkins
+    container_name: jenkins
+networks:
+  Jenkins: 
