--- a/musor/Vagrantfile
+++ b/musor/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure("2") do |config|
              end
              master.vm.provision "shell", inline: <<-shell
                sudo apt-get update
-               sudo apt install -y docker.io
+               sudo apt install -y docker.io docker-compose
                sudo usermod -a -G docker vagrant
              shell
        end
