--- a/task-10/test.yaml
+++ b/task-10/test.yaml
@@ -17,18 +17,17 @@ spec:
         image: flashboy/test
         ports:
         - containerPort: 80
-#        readinessProbe:
-#          initialDelaySeconds: 10
-#          timeoutSeconds: 1
-#          httpGet:
-#            path: \
-#            port: 80
-#        livenessProbe:
-#          initialDelaySeconds: 10
-#          timeoutSeconds: 1
-#          httpGet:
-#            path: /
-#            port: 80
+        readinessProbe:
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+          httpGet:
+            path: /
+            port: 80
+        livenessProbe:
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+          httpGet:
+            path: /
 ---
 apiVersion: v1
 kind: Service
