--- a/task-10/test.yaml
+++ b/task-10/test.yaml
@@ -28,6 +28,7 @@ spec:
           timeoutSeconds: 1
           httpGet:
             path: /
+            port: 80
 ---
 apiVersion: v1
 kind: Service
